Small correction to previous commit

--- a/Assignment01/CS6910_Assignment1.ipynb
+++ b/Assignment01/CS6910_Assignment1.ipynb
@@ -11,6 +11,255 @@
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "68bcc91da93c4f30ac9212252b5aad36": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "VBoxModel",
+          "state": {
+            "_view_name": "VBoxView",
+            "_dom_classes": [],
+            "_model_name": "VBoxModel",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "box_style": "",
+            "layout": "IPY_MODEL_d721227f8c7b40bea91728d84102b6a4",
+            "_model_module": "@jupyter-widgets/controls",
+            "children": [
+              "IPY_MODEL_5317658c85e2473da94ab87c5ef589b0",
+              "IPY_MODEL_a63b886abe4f45d9833944e3aad698bf"
+            ]
+          }
+        },
+        "d721227f8c7b40bea91728d84102b6a4": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "5317658c85e2473da94ab87c5ef589b0": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "LabelModel",
+          "state": {
+            "_view_name": "LabelView",
+            "style": "IPY_MODEL_47916ec6f219477fa6a97959cebff2ea",
+            "_dom_classes": [],
+            "description": "",
+            "_model_name": "LabelModel",
+            "placeholder": "​",
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": " 0.01MB of 0.01MB uploaded (0.00MB deduped)\r",
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_2a7af3947f1d444697b0d24af17d20c9"
+          }
+        },
+        "a63b886abe4f45d9833944e3aad698bf": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "FloatProgressModel",
+          "state": {
+            "_view_name": "ProgressView",
+            "style": "IPY_MODEL_048a46d2fce24c01b03f5fd5661f7975",
+            "_dom_classes": [],
+            "description": "",
+            "_model_name": "FloatProgressModel",
+            "bar_style": "",
+            "max": 1,
+            "_view_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "value": 1,
+            "_view_count": null,
+            "_view_module_version": "1.5.0",
+            "orientation": "horizontal",
+            "min": 0,
+            "description_tooltip": null,
+            "_model_module": "@jupyter-widgets/controls",
+            "layout": "IPY_MODEL_dfa8ec4a29904f4da7b672bf13da3613"
+          }
+        },
+        "47916ec6f219477fa6a97959cebff2ea": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "DescriptionStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "DescriptionStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "2a7af3947f1d444697b0d24af17d20c9": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        },
+        "048a46d2fce24c01b03f5fd5661f7975": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ProgressStyleModel",
+          "state": {
+            "_view_name": "StyleView",
+            "_model_name": "ProgressStyleModel",
+            "description_width": "",
+            "_view_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.5.0",
+            "_view_count": null,
+            "_view_module_version": "1.2.0",
+            "bar_color": null,
+            "_model_module": "@jupyter-widgets/controls"
+          }
+        },
+        "dfa8ec4a29904f4da7b672bf13da3613": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "state": {
+            "_view_name": "LayoutView",
+            "grid_template_rows": null,
+            "right": null,
+            "justify_content": null,
+            "_view_module": "@jupyter-widgets/base",
+            "overflow": null,
+            "_model_module_version": "1.2.0",
+            "_view_count": null,
+            "flex_flow": null,
+            "width": null,
+            "min_width": null,
+            "border": null,
+            "align_items": null,
+            "bottom": null,
+            "_model_module": "@jupyter-widgets/base",
+            "top": null,
+            "grid_column": null,
+            "overflow_y": null,
+            "overflow_x": null,
+            "grid_auto_flow": null,
+            "grid_area": null,
+            "grid_template_columns": null,
+            "flex": null,
+            "_model_name": "LayoutModel",
+            "justify_items": null,
+            "grid_row": null,
+            "max_height": null,
+            "align_content": null,
+            "visibility": null,
+            "align_self": null,
+            "height": null,
+            "min_height": null,
+            "padding": null,
+            "grid_auto_rows": null,
+            "grid_gap": null,
+            "max_width": null,
+            "order": null,
+            "_view_module_version": "1.2.0",
+            "grid_template_areas": null,
+            "object_position": null,
+            "object_fit": null,
+            "grid_auto_columns": null,
+            "margin": null,
+            "display": null,
+            "left": null
+          }
+        }
+      }
     }
   },
   "cells": [
@@ -548,7 +797,7 @@
         "  (X_train, y_train), (X_test, y_test) = fashion_mnist.load_data()\r\n",
         "  X_train_flatten = np.reshape(X_train,(X_train.shape[0],X_train.shape[1]*X_train.shape[2]))/255.0\r\n",
         "  X_train_flatten = X_train_flatten.T\r\n",
-        "  num_train = 10000\r\n",
+        "  num_train = X_train.shape[0]\r\n",
         "  num_val = int(0.1*num_train)\r\n",
         "  \r\n",
         "  val = random.sample(range(int(num_train)), int(num_val))\r\n",
@@ -563,9 +812,9 @@
         "      num_hidden = 4,\r\n",
         "      size_hidden = 128,\r\n",
         "      weight_decay = 0,\r\n",
-        "      optimizer = 'adam',\r\n",
-        "      initializer = 'Xavier',\r\n",
-        "      activation = 'relu',\r\n",
+        "      optimizer = 'momentum',\r\n",
+        "      initializer = 'random',\r\n",
+        "      activation = 'sigmoid',\r\n",
         "      batch_size = 64,\r\n",
         "      learning_rate = 0.001,\r\n",
         "      max_epoch = 5,\r\n",
@@ -651,7 +900,7 @@
         "    wandb.log(metrics)\r\n",
         "  wandb.run.finish()"
       ],
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -697,10 +946,10 @@
         "            \"values\":['momentum' ,'nag','rmsprop', 'adam','nadam']\r\n",
         "        },\r\n",
         "        \"initializer\": {\r\n",
-        "            \"values\":['Xavier']\r\n",
+        "            \"values\":['random','Xavier']\r\n",
         "        },\r\n",
         "        \"activation\":{\r\n",
-        "            \"values\": ['relu']\r\n",
+        "            \"values\": ['sigmoid','tanh','relu']\r\n",
         "        }\r\n",
         "    }\r\n",
         "}\r\n",
@@ -724,7 +973,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 865
+          "height": 1000,
+          "referenced_widgets": [
+            "68bcc91da93c4f30ac9212252b5aad36",
+            "d721227f8c7b40bea91728d84102b6a4",
+            "5317658c85e2473da94ab87c5ef589b0",
+            "a63b886abe4f45d9833944e3aad698bf",
+            "47916ec6f219477fa6a97959cebff2ea",
+            "2a7af3947f1d444697b0d24af17d20c9",
+            "048a46d2fce24c01b03f5fd5661f7975",
+            "dfa8ec4a29904f4da7b672bf13da3613"
+          ]
         },
         "id": "ySONBOV_DXnm",
         "outputId": "3516092d-35c3-4993-a1ec-e5f3c54913f1"
@@ -732,7 +991,7 @@
       "source": [
         "wandb.agent(sweep_id, swp)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -816,9 +1075,75 @@
             "     Accuracy 82.52\n",
             "     Validation Loss 0.44654699774836065\n",
             "     Validation Accuracy 83.8\n",
-            "Epoch: 5\n"
+            "Epoch: 5\n",
+            "     Loss 0.4466308495284936\n",
+            "     Accuracy 83.88\n",
+            "     Validation Loss 0.4046853159615893\n",
+            "     Validation Accuracy 85.0\n",
+            "Epoch: 6\n",
+            "     Loss 0.4198141760837062\n",
+            "     Accuracy 84.66\n",
+            "     Validation Loss 0.37975071278394973\n",
+            "     Validation Accuracy 85.7\n",
+            "Epoch: 7\n",
+            "     Loss 0.3981548168519577\n",
+            "     Accuracy 85.47\n",
+            "     Validation Loss 0.3645268259188133\n",
+            "     Validation Accuracy 86.3\n",
+            "Epoch: 8\n",
+            "     Loss 0.3808296732879563\n",
+            "     Accuracy 85.95\n",
+            "     Validation Loss 0.3434759676403404\n",
+            "     Validation Accuracy 87.2\n",
+            "Epoch: 9\n",
+            "     Loss 0.3652299520183565\n",
+            "     Accuracy 86.6\n",
+            "     Validation Loss 0.33548703760833076\n",
+            "     Validation Accuracy 87.5\n",
+            "Epoch: 10\n",
+            "     Loss 0.35294875278408566\n",
+            "     Accuracy 86.96\n",
+            "     Validation Loss 0.32268650913994396\n",
+            "     Validation Accuracy 87.7\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<br/>Waiting for W&B process to finish, PID 121<br/>Program ended successfully."
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "68bcc91da93c4f30ac9212252b5aad36",
+              "version_minor": 0,
+              "version_major": 2
+            },
+            "text/plain": [
+              "VBox(children=(Label(value=' 0.00MB of 0.00MB uploaded (0.00MB deduped)\\r'), FloatProgress(value=1.0, max=1.0)…"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[34m\u001b[1mwandb\u001b[0m: Ctrl + C detected. Stopping sweep.\n"
+          ],
+          "name": "stderr"
         }
       ]
     },
