CNN - Part A: Training from Scratch

--- a/Assignment02/Assignment2_PartA.ipynb
+++ b/Assignment02/Assignment2_PartA.ipynb
@@ -435,22 +435,7 @@
         "  wandb.init(project=\"Assignment 2\")\n",
         "  wandb.run.name = \"Filter_viz {}\".format(i+1)  \n",
         "  wandb.log({\"Filter\": [wandb.Image(feature_maps[0, :, :, i], caption=i+1)]})\n",
-        "  wandb.run.finish()\n",
-        "\n",
-        "\n",
-        "\n",
-        "#square = 11\n",
-        "# for _ in range(square):\n",
-        "# \tfor _ in range(square):\n",
-        "# \t\t# specify subplot and turn of axis\n",
-        "# \t\tax = plt.subplot(square, square, ix)\n",
-        "# \t\tax.set_xticks([])\n",
-        "# \t\tax.set_yticks([])\n",
-        "# \t\t# plot filter channel in grayscale\n",
-        "# \t\tplt.imshow(feature_maps[0, :, :, ix-1], cmap='gray')\n",
-        "# \t\tix += 1\n",
-        "# show the figure\n",
-        "#plt.show()"
+        "  wandb.run.finish()"
       ],
       "execution_count": null,
       "outputs": []
