CNN : Training from Scratch

--- a/Assignment02/Assignment2_PartA.ipynb
+++ b/Assignment02/Assignment2_PartA.ipynb
@@ -6,7 +6,8 @@
       "name": "Assignment2_PartA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -19,16 +20,38 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kodikarthik21/CS6910---Fundamentals-of-Deep-Learning/blob/main/Assignment02/Assignment2_PartA.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "-WuiCFS-bK1e"
+        "id": "-WuiCFS-bK1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "503fe98b-d795-4e55-9ec4-8a23eb8b6d39"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -59,10 +82,59 @@
         "id": "yUxYr82I0HsZ"
       },
       "source": [
+        "#--------------STORE nature_12K.zip in My Drive and run the following code------\n",
         "!unzip '/content/drive/MyDrive/nature_12K'"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "52WKCnXgubgl",
+        "outputId": "5126efef-e182-4e01-c8c6-7cf8d49d1981"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import tensorflow as tf \n",
+        "from tensorflow.keras.models import Sequential,load_model\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten, Conv2D, MaxPooling2D, BatchNormalization\n",
+        "from tensorflow.keras.layers.experimental import preprocessing\n",
+        "from tensorflow.keras.applications.resnet import ResNet50, preprocess_input, decode_predictions\n",
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.preprocessing import image\n",
+        "from keras.preprocessing.image import load_img\n",
+        "from keras.preprocessing.image import img_to_array\n",
+        "from keras import backend as K\n",
+        "from wandb.keras import WandbCallback\n",
+        "import matplotlib.pyplot as plt\n",
+        "from numpy.random import seed\n",
+        "from numpy.random import randint\n",
+        "import pandas as pd\n",
+        "tf.test.gpu_device_name()"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'/device:GPU:0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -70,7 +142,8 @@
         "id": "mANj6GJvw6ec"
       },
       "source": [
-        "#Question 1 (5 Marks)\n",
+        "#Part A: Training from scratch\n",
+        "##Question 1 (5 Marks)\n",
         "\n",
         "\n",
         "\n",
@@ -186,33 +259,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "52WKCnXgubgl"
-      },
-      "source": [
-        "import numpy as np\n",
-        "import tensorflow as tf \n",
-        "from tensorflow.keras.models import Sequential,load_model\n",
-        "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten, Conv2D, MaxPooling2D, BatchNormalization\n",
-        "from tensorflow.keras.layers.experimental import preprocessing\n",
-        "from tensorflow.keras.applications.resnet import ResNet50, preprocess_input, decode_predictions\n",
-        "from tensorflow.keras.models import Model\n",
-        "from tensorflow.keras.preprocessing import image\n",
-        "from keras.preprocessing.image import load_img\n",
-        "from keras.preprocessing.image import img_to_array\n",
-        "from keras import backend as K\n",
-        "from wandb.keras import WandbCallback\n",
-        "import matplotlib.pyplot as plt\n",
-        "from numpy.random import seed\n",
-        "from numpy.random import randint\n",
-        "import pandas as pd\n",
-        "tf.test.gpu_device_name()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NDEkeVPTOk9c"
@@ -235,7 +281,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HdA3NoTsuWX8",
-        "outputId": "d31a06c9-b45f-4abc-a5e5-6caf16d6b144"
+        "outputId": "09d51604-45fe-4edd-98fb-119c5ba44c4f"
       },
       "source": [
         "train_dataset = tf.keras.preprocessing.image_dataset_from_directory('/content/inaturalist_12K/train',labels = 'inferred', \n",
@@ -246,7 +292,7 @@
         "\n",
         "test_dataset = tf.keras.preprocessing.image_dataset_from_directory('/content/inaturalist_12K/val', labels = 'inferred',seed = 123)\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +360,8 @@
       "source": [
         "#-------------------------CODE FOR ACTUAL SWEEP---------------------------------\n",
         "model,config = model_framework()\n",
-        "wandb.agent(sweep_id, function=train(model,config))\n"
+        "# model = train(model,config)     FOR ONE RUN\n",
+        "# wandb.agent(sweep_id, function=train(model,config))  FOR SWEEP\n"
       ],
       "execution_count": null,
       "outputs": []
