--- a/Assignment02/Assignment2_PartA.ipynb
+++ b/Assignment02/Assignment2_PartA.ipynb
@@ -6,7 +6,6 @@
       "name": "Assignment2_PartA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +29,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WgyZO9Ezoeh7"
+      },
+      "source": [
+        "# INSTALLING AND IMPORTING DEPENDENCIES"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "-WuiCFS-bK1e",
@@ -39,6 +47,7 @@
         "outputId": "503fe98b-d795-4e55-9ec4-8a23eb8b6d39"
       },
       "source": [
+        "#importing Google Drive\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
@@ -59,6 +68,7 @@
         "id": "yingReD0QyhK"
       },
       "source": [
+        "#installing wandb\n",
         "!pip install wandb"
       ],
       "execution_count": null,
@@ -70,6 +80,7 @@
         "id": "4S9qlmY7Tbpm"
       },
       "source": [
+        "#importing wandb and login\n",
         "import wandb\n",
         "wandb.login()"
       ],
@@ -83,7 +94,7 @@
       },
       "source": [
         "#--------------STORE nature_12K.zip in My Drive and run the following code------\n",
-        "!unzip '/content/drive/MyDrive/nature_12K'"
+        "!unzip '/content/drive/MyDrive/nature_12K' #unzip the file to get dataset"
       ],
       "execution_count": null,
       "outputs": []
@@ -99,6 +110,7 @@
         "outputId": "5126efef-e182-4e01-c8c6-7cf8d49d1981"
       },
       "source": [
+        "#importing the required libraries\n",
         "import numpy as np\n",
         "import tensorflow as tf \n",
         "from tensorflow.keras.models import Sequential,load_model\n",
@@ -182,7 +194,6 @@
         "#-------------------OPTIMIZERS--------------------------------------------------\n",
         "  learning_rate = 1e-3\n",
         "  decay_rate = learning_rate / config.max_epoch\n",
-        "  momentum = 0.8\n",
         "  if config.optimizer == 'adam':\n",
         "    optimizer = tf.keras.optimizers.Adam(lr=learning_rate, decay=decay_rate)\n",
         "  elif config.optimizer == 'nadam':\n",
@@ -205,31 +216,31 @@
         "#-------------------MODEL FRAMEWORK---------------------------------------------\n",
         "  nf = config.num_filters\n",
         "\n",
-        "  if config.data_augmentation == \"Y\":\n",
+        "  if config.data_augmentation == \"Y\": #data augmentation is done\n",
         "    model = Sequential([data_aug])\n",
-        "  elif config.data_augmentation == \"N\":\n",
+        "  elif config.data_augmentation == \"N\": #data augmentation isn't done\n",
         "    model = Sequential()\n",
         "\n",
-        "  model.add(Conv2D(nf, (3, 3), input_shape=(256, 256, 3),name = 'conv1'))\n",
-        "  model.add(Activation('relu'))\n",
-        "  model.add(MaxPooling2D(pool_size=(2, 2),strides = 1))\n",
+        "  model.add(Conv2D(nf, (3, 3), input_shape=(256, 256, 3),name = 'conv1')) #initial layer\n",
+        "  model.add(Activation('relu'))  #relu activation\n",
+        "  model.add(MaxPooling2D(pool_size=(2, 2),strides = 1))  #max pooling layer\n",
         "\n",
         "  for i in range(1,5):\n",
-        "    if config.filter_org == 'double':\n",
+        "    if config.filter_org == 'double': #number of filters double after each layer\n",
         "      nf = nf*2\n",
-        "    elif config.filter_org == 'half':\n",
+        "    elif config.filter_org == 'half': #number of filters get halved after each layer\n",
         "      nf = nf/2\n",
         "    model.add(Conv2D(nf, (3, 3),name = 'conv{}'.format(i+1)))\n",
         "    model.add(Activation('relu'))\n",
-        "    if config.batch_normalization == 'Y':\n",
+        "    if config.batch_normalization == 'Y': #adding batch normalization, if necessary\n",
         "      model.add(BatchNormalization())\n",
         "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
         "\n",
-        "  model.add(Flatten())\n",
-        "  model.add(Dense(64))\n",
-        "  model.add(Dropout(config.dropout))\n",
-        "  model.add(Activation('relu'))\n",
-        "  model.add(Dense(10))\n",
+        "  model.add(Flatten())  #flattening the output of the last layer\n",
+        "  model.add(Dense(64))  #dense layer with 64 neurons\n",
+        "  model.add(Dropout(config.dropout))  #dropout is applied to the dense layers because it has the highest number of parameters\n",
+        "  model.add(Activation('relu'))  \n",
+        "  model.add(Dense(10)) #output layer\n",
         "  model.add(Activation('softmax'))\n",
         " \n",
         " #------------MODEL COMPILATION--------------------------------------\n",
@@ -284,13 +295,14 @@
         "outputId": "09d51604-45fe-4edd-98fb-119c5ba44c4f"
       },
       "source": [
+        "#image_dataset_from_directory splits the images from each class equally\n",
         "train_dataset = tf.keras.preprocessing.image_dataset_from_directory('/content/inaturalist_12K/train',labels = 'inferred', \n",
-        "                                                                    validation_split=0.1, seed = 123, subset = \"training\")\n",
+        "                                                                    validation_split=0.1, seed = 123, subset = \"training\") #training dataset\n",
         "\n",
         "validation_dataset = tf.keras.preprocessing.image_dataset_from_directory('/content/inaturalist_12K/train', labels = 'inferred',\n",
-        "                                                                    validation_split=0.1, seed = 123, subset = \"validation\")\n",
+        "                                                                    validation_split=0.1, seed = 123, subset = \"validation\") #validation dataset\n",
         "\n",
-        "test_dataset = tf.keras.preprocessing.image_dataset_from_directory('/content/inaturalist_12K/val', labels = 'inferred',seed = 123)\n"
+        "test_dataset = tf.keras.preprocessing.image_dataset_from_directory('/content/inaturalist_12K/val', labels = 'inferred',seed = 123) #test dataset"
       ],
       "execution_count": null,
       "outputs": [
