Sweep setup done for CD

--- a/Assignment04/Assignment_4.ipynb
+++ b/Assignment04/Assignment_4.ipynb
@@ -547,7 +547,24 @@
         "id": "NhXh0oIRuYlE"
       },
       "source": [
-        "swp() "
+        "  \"name\": \"Sweep - CD\",\n",
+        "  \"method\": \"grid\",\n",
+        "  \"project\": \"Assignment-4\",\n",
+        "  \"metric\":{\n",
+        "      \"name\":\"val_accuracy\",\n",
+        "      \"goal\":\"maximize\"\n",
+        "  },\n",
+        "  \"parameters\": {\n",
+        "        \"n_hidden\": {\n",
+        "            \"values\":[64,128,256]\n",
+        "        },\n",
+        "        \"k\": {\n",
+        "            \"values\":[1,5,10]\n",
+        "        }\n",
+        "    }\n",
+        "}\n",
+        "\n",
+        "sweep_id = wandb.sweep(sweep_config)"
       ],
       "execution_count": null,
       "outputs": []
