Commented the code corresponding to t-SNE

--- a/Assignment04/Assignment_4.ipynb
+++ b/Assignment04/Assignment_4.ipynb
@@ -660,12 +660,12 @@
         "id": "v9maWJFvMdZl"
       },
       "source": [
-        "rbm = RBM(input=train_data, n_visible=784, n_hidden=256)\n",
+        "rbm = RBM(input=train_data, n_visible=784, n_hidden=256) #Best model configurations\n",
         "wandb.init(project=\"Assignment-4\")\n",
         "wandb.run.name = \"Best model\"\n",
         "for epoch in range(25):\n",
         "  print('Training epoch: %d' %epoch)\n",
-        "  hidden_rep,hidden_rep_test= train_rbm(rbm,epoch, val_data,test_data,k=10)\n",
+        "  hidden_rep,hidden_rep_test= train_rbm(rbm,epoch, val_data,test_data,k=10) #training the best model and getting hidden representations\n",
         "  print(\"Done\")"
       ],
       "execution_count": null,
@@ -678,7 +678,7 @@
       },
       "source": [
         "from sklearn.manifold import TSNE\n",
-        "X_reduced = TSNE(n_components=2).fit_transform(hidden_rep_test)"
+        "X_reduced = TSNE(n_components=2).fit_transform(hidden_rep_test) #Dimensionality reduction of hidden representation to 2 dimensions"
       ],
       "execution_count": null,
       "outputs": []
@@ -689,10 +689,19 @@
         "id": "sxV849U0fDla"
       },
       "source": [
-        "from bioinfokit.visuz import cluster"
+        "from bioinfokit.visuz import cluster #library for plotting X_reduced"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SpuJ61aGz4qp"
+      },
+      "source": [
+        "Running the below code will plot the t-SNE in a 2-D plane. The result will be saved as tsne_2d.png in your current directory. If you are running it in Colab, it will be present in the file explorer in the left hand side of the notebook"
+      ]
     },
     {
       "cell_type": "code",
@@ -712,7 +721,7 @@
         "id": "vMJivrIJvBoj"
       },
       "source": [
-        "wandb.log({\"t-SNE Visualization\": wandb.Image(\"/content/tsne_2d.png\")})"
+        "wandb.log({\"t-SNE Visualization\": wandb.Image(\"/content/tsne_2d.png\")}) #logging the plot to wandb"
       ],
       "execution_count": null,
       "outputs": []
